--- a/project_1/src/main/webapp/WEB-INF/web.xml
+++ b/project_1/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	id="WebApp_ID" version="3.1">
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+		 version="3.1">
 
 	<display-name>bookstore</display-name>
 
@@ -11,6 +11,14 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/configs/*.xml</param-value>
 	</context-param>
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<!-- Load web server listener -->
 	<listener>
@@ -21,8 +29,10 @@
 	<servlet>
 		<servlet-name>bookstore</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-		<async-supported>true</async-supported>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>WEB-INF/bookstore-servlet.xml</param-value>
+		</init-param>
 	</servlet>
 	
 	<!-- Config url which can passed -->
@@ -30,4 +40,6 @@
 		<servlet-name>bookstore</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+
+
 </web-app>
