--- a/project_1/pom.xml
+++ b/project_1/pom.xml
@@ -29,6 +29,7 @@
 		<servletapi.version>2.5</servletapi.version>
 		<slf4j.version>1.7.6</slf4j.version>
 		<hibernate-annotation.version>5.0.1.Final</hibernate-annotation.version>
+		<security.version>3.2.3.RELEASE</security.version>
 	</properties>
 
 	<dependencies>
@@ -74,6 +75,17 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${security.version}</version>
 		</dependency>
 
 		<!-- Hiberante -->
@@ -209,6 +221,7 @@
 			<artifactId>tiles-jsp</artifactId>
 			<version>${apachetiles.version}</version>
 		</dependency>
+
 	</dependencies>
 
 
@@ -245,4 +258,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 </project>
