--- a/project_1/src/main/webapp/WEB-INF/web.xml
+++ b/project_1/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,7 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>WEB-INF/bookstore-servlet.xml</param-value>
 		</init-param>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
 	
 	<!-- Config url which can passed -->
