paying online with paypal

--- a/project_1/src/main/resources/mail.properties
+++ b/project_1/src/main/resources/mail.properties
@@ -4,7 +4,7 @@ mail.smtp.auth=true
 mail.smtp.starttls.enable=true
 mail.debug=true
 mail.transport.protocol=smtp
-mail.username=test
-mail.password=test
 mail.message.subject=Hello {0}!
 mail.message.content=Thank you for believing us!
+mail.username=trongtqk68@gmail.com
+mail.password=trongtq1998
