--- a/project_1/src/main/webapp/WEB-INF/web.xml
+++ b/project_1/src/main/webapp/WEB-INF/web.xml
@@ -45,5 +45,9 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+	
+	
+	<error-page>
+		<location>/errors</location>
+	</error-page>
 </web-app>
