add file mail.properties into gitignore

--- a/project_1/.gitignore
+++ b/project_1/.gitignore
@@ -35,3 +35,4 @@ project_1/src/main/resources/datasources.properties
 *.classpath
 *.settings
 .project
+project_1/src/main/resources/mail.properties
