--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ hs_err_pid*
 project_1/.settings
 project_1/target
 project_1/src/main/resources/datasources.properties
+project_1/src/main/resources/cloud.properties
