--- a/project_1/pom.xml
+++ b/project_1/pom.xml
@@ -9,6 +9,7 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jdk>1.8</jdk>
 		<spring.version>4.3.18.RELEASE</spring.version>
 		<mysql-connector-java>6.0.6</mysql-connector-java>
@@ -299,6 +300,20 @@
 			<artifactId>spring-messaging</artifactId>
 			<version>4.2.4.RELEASE</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-core -->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.19.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-taglib -->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-taglib</artifactId>
+			<version>1.0.14</version>
+		</dependency>
+
 	</dependencies>
 
 
